src/experiment/parse.output
Terminals unused in grammar

    CASE
    VARCASE
    SPACE
    TAB
    INT8
    INT16
    INT32
    INT64
    UINT8
    UINT16
    UINT32
    UINT64
    FLOAT32
    FLOAT64
    BYTE
    TRUE
    FALSE
    STRING
    SELECT
    DEFAULT


State 74 conflicts: 1 reduce/reduce
State 94 conflicts: 2 reduce/reduce
State 118 conflicts: 1 reduce/reduce
State 141 conflicts: 1 shift/reduce
State 167 conflicts: 1 shift/reduce
State 194 conflicts: 1 reduce/reduce
State 226 conflicts: 1 shift/reduce
State 286 conflicts: 1 shift/reduce


Grammar

    0 $accept: SourceFile $end

    1 SourceFile: PackageClause ';' STAR_ImportDecl_SC STAR_TopLevelDecl_SC

    2 PackageClause: PACKAGE PackageName

    3 PackageName: ID

    4 ImportDecl: IMPORT ImportSpec
    5           | IMPORT '(' STAR_ImportSpec_SC ')'

    6 ImportSpec: ImportPath
    7           | '.' ImportPath
    8           | PackageName ImportPath

    9 ImportPath: STRING_LIT

   10 TopLevelDecl: Declaration
   11             | FunctionDecl

   12 STAR_TopLevelDecl_SC: STAR_TopLevelDecl_SC TopLevelDecl ';'
   13                     | ε

   14 STAR_ImportDecl_SC: STAR_ImportDecl_SC ImportDecl ';'
   15                   | ε

   16 STAR_ImportSpec_SC: STAR_ImportSpec_SC ImportSpec ';'
   17                   | ε

   18 STAR_CM_ID: STAR_CM_ID ',' ID
   19           | ε

   20 STAR_ConstSpec_SC: STAR_ConstSpec_SC ConstSpec ';'
   21                  | ε

   22 STAR_VarSpec_SC: STAR_VarSpec_SC VarSpec ';'
   23                | ε

   24 STAR_CM_EXP: STAR_CM_EXP ',' Expression
   25            | ε

   26 STAR_TypeSpec_SC: STAR_TypeSpec_SC ';'
   27                 | ε

   28 STAR_Statement_SC: STAR_Statement_SC Statement ';'
   29                  | ε

   30 STAR_CM_ParameterDecl: STAR_CM_ParameterDecl ',' ParameterDecl
   31                      | ε

   32 STAR_FieldDecl_SC: STAR_FieldDecl_SC FieldDecl ';'
   33                  | ε

   34 Declaration: ConstDecl
   35            | TypeDecl
   36            | VarDecl

   37 ConstDecl: CONST ConstSpec
   38          | CONST '(' STAR_ConstSpec_SC ')'

   39 ConstSpec: IdentifierList

   40 IdentifierList: ID STAR_CM_ID

   41 TypeDecl: TYPE_TOK TypeSpec
   42         | TYPE_TOK '(' STAR_TypeSpec_SC ')'

   43 TypeSpec: AliasDecl
   44         | TypeDef

   45 AliasDecl: ID '=' Type

   46 TypeDef: ID Type

   47 VarDecl: VAR VarSpec
   48        | VAR '(' STAR_VarSpec_SC ')'

   49 VarSpec: IdentifierList "=" ExpressionList

   50 ExpressionList: Expression STAR_CM_EXP

   51 Expression: UnaryExpr
   52           | Expression binary_op Expression

   53 UnaryExpr: PrimaryExpr
   54          | unary_op UnaryExpr

   55 binary_op: "||"
   56          | "&&"
   57          | rel_op
   58          | add_op
   59          | mul_op

   60 rel_op: "=="
   61       | "!="
   62       | '<'
   63       | "<="
   64       | '>'
   65       | ">="

   66 add_op: '+'
   67       | '-'
   68       | '|'
   69       | '^'

   70 assign_op: "+="
   71          | "-="
   72          | "|="
   73          | "^="
   74          | "*="
   75          | "/="
   76          | "%="
   77          | "<<="
   78          | ">>="
   79          | "&="

   80 mul_op: '*'
   81       | '/'
   82       | '%'
   83       | "<<"
   84       | ">>"
   85       | '&'

   86 unary_op: '+'
   87         | '-'
   88         | '!'
   89         | '^'
   90         | '*'
   91         | '&'

   92 PrimaryExpr: Operand
   93            | PrimaryExpr Index
   94            | PrimaryExpr Selector
   95            | PrimaryExpr Arguments

   96 Selector: '.' ID

   97 Index: '[' Expression ']'

   98 Arguments: '(' ')'
   99          | '(' ArgumentInBracket ')'

  100 ArgumentInBracket: ArgumentInBracketFirst ArgumentInBracketEnd

  101 ArgumentInBracketFirst: Type
  102                       | Type ',' ExpressionList

  103 ArgumentInBracketEnd: ELIPSIS ','
  104                     | ELIPSIS
  105                     | ','
  106                     | ε

  107 Operand: Literal
  108        | OperandName
  109        | "(" Expression ")"

  110 Literal: BasicLit
  111        | CompositeLit
  112        | FunctionLit

  113 INT_LIT: DEC_LIT
  114        | BINARY_LIT
  115        | HEX_LIT

  116 BasicLit: INT_LIT
  117         | FLOAT_LIT
  118         | STRING_LIT

  119 OperandName: ID
  120            | QualifiedIdent

  121 QualifiedIdent: PackageName '.' ID

  122 CompositeLit: LiteralType LiteralValue

  123 LiteralType: StructType
  124            | ArrayType
  125            | '[' ELIPSIS ']' ElementType
  126            | TypeName

  127 LiteralValue: '{' '}'
  128             | '{' ElementList '}'
  129             | '{' ElementList ',' '}'

  130 ElementList: KeyedElement STAR_CM_KeyedElement

  131 STAR_CM_KeyedElement: STAR_CM_KeyedElement ',' KeyedElement
  132                     | ε

  133 KeyedElement: Key ':' Element
  134             | Element

  135 Key: Expression
  136    | LiteralValue

  137 Element: Expression
  138        | LiteralValue

  139 FunctionLit: FUNC Signature FunctionBody

  140 FunctionDecl: FUNC FunctionName Signature FunctionBody
  141             | FUNC FunctionName Signature

  142 FunctionName: ID

  143 FunctionBody: Block

  144 Block: '{' STAR_Statement_SC '}'

  145 Statement: Declaration
  146          | LabeledStmt
  147          | SimpleStmt
  148          | GoStmt
  149          | ReturnStmt
  150          | BreakStmt
  151          | ContinueStmt
  152          | GotoStmt
  153          | FallthroughStmt
  154          | Block
  155          | IfStmt
  156          | ForStmt

  157 LabeledStmt: Label ':' Statement

  158 Label: ID

  159 SimpleStmt: EmptyStmt
  160           | ExpressionStmt
  161           | IncDecStmt
  162           | Assignment

  163 EmptyStmt: ε

  164 ExpressionStmt: Expression

  165 IncDecStmt: Expression "++"
  166           | Expression "--"

  167 Assignment: ExpressionList assign_op ExpressionList

  168 IfStmt: IF Expression Block
  169       | IF SimpleStmt ';' Expression Block
  170       | IF SimpleStmt ';' Expression Block ELSE Block
  171       | IF SimpleStmt ';' Expression Block ELSE IfStmt

  172 ForStmt: FOR Block
  173        | FOR ForStmtAfter Block

  174 ForStmtAfter: Condition
  175             | ForClause
  176             | RangeClause

  177 Condition: Expression

  178 ForClause: OPT_InitStmt ';' OPT_Condition ';' OPT_PostStmt

  179 OPT_InitStmt: InitStmt

  180 OPT_Condition: Condition
  181              | ε

  182 OPT_PostStmt: PostStmt

  183 InitStmt: SimpleStmt

  184 PostStmt: SimpleStmt

  185 RangeClause: RANGE Expression
  186            | ExpressionList '=' RANGE Expression

  187 GoStmt: GO Expression

  188 ReturnStmt: RETURN ExpressionList
  189           | RETURN

  190 BreakStmt: BREAK Label
  191          | BREAK

  192 ContinueStmt: CONTINUE Label
  193             | CONTINUE

  194 GotoStmt: GOTO Label

  195 FallthroughStmt: FALLTHROUGH

  196 Type: TypeName
  197     | TypeLit
  198     | '(' Type ')'

  199 TypeName: ID
  200         | QualifiedIdent

  201 TypeLit: ArrayType
  202        | StructType
  203        | PointerType
  204        | FunctionType

  205 ArrayType: '[' ArrayLength ']' ElementType

  206 ArrayLength: Expression

  207 ElementType: Type

  208 StructType: STRUCT '{' STAR_FieldDecl_SC '}'

  209 FieldDecl: IdentifierList Type Tag
  210          | IdentifierList Type

  211 Tag: STRING_LIT

  212 PointerType: '*' BaseType

  213 BaseType: Type

  214 FunctionType: FUNC Signature

  215 Signature: Parameters
  216          | Parameters Result

  217 Result: Parameters
  218       | TypeName
  219       | TypeLit

  220 Parameters: '(' ')'
  221           | '(' ParameterList ')'
  222           | '(' ParameterList ',' ')'

  223 ParameterList: ParameterDecl STAR_CM_ParameterDecl

  224 ParameterDecl: Type
  225              | IdentifierList Type
  226              | IdentifierList ELIPSIS Type
  227              | ELIPSIS Type


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 88
    '%' (37) 82
    '&' (38) 85 91
    '(' (40) 5 38 42 48 98 99 198 220 221 222
    ')' (41) 5 38 42 48 98 99 198 220 221 222
    '*' (42) 80 90 212
    '+' (43) 66 86
    ',' (44) 18 24 30 102 103 105 129 131 222
    '-' (45) 67 87
    '.' (46) 7 96 121
    '/' (47) 81
    ':' (58) 133 157
    ';' (59) 1 12 14 16 20 22 26 28 32 169 170 171 178
    '<' (60) 62
    '=' (61) 45 186
    '>' (62) 64
    '[' (91) 97 125 205
    ']' (93) 97 125 205
    '^' (94) 69 89
    '{' (123) 127 128 129 144 208
    '|' (124) 68
    '}' (125) 127 128 129 144 208
    error (256)
    CASE (258)
    BREAK (259) 190 191
    FUNC (260) 139 140 141 214
    VARCASE (261)
    STRUCT (262) 208
    RETURN (263) 188 189
    ELSE (264) 170 171
    GOTO (265) 194
    PACKAGE (266) 2
    CONST (267) 37 38
    IF (268) 168 169 170 171
    RANGE (269) 185 186
    CONTINUE (270) 192 193
    FOR (271) 172 173
    SPACE (272)
    TAB (273)
    ID (274) 3 18 40 45 46 96 119 121 142 158 199
    VAR (275) 47 48
    INT8 (276)
    INT16 (277)
    INT32 (278)
    INT64 (279)
    UINT8 (280)
    UINT16 (281)
    UINT32 (282)
    UINT64 (283)
    FLOAT32 (284)
    FLOAT64 (285)
    BYTE (286)
    TRUE (287)
    FALSE (288)
    STRING_LIT (289) 9 118 211
    BINARY_LIT (290) 114
    HEX_LIT (291) 115
    FLOAT_LIT (292) 117
    DEC_LIT (293) 113
    IMPORT (294) 4 5
    STRING (295)
    ELIPSIS (296) 103 104 125 226 227
    SELECT (297)
    GO (298) 187
    FALLTHROUGH (299) 195
    DEFAULT (300)
    TYPE_TOK (301) 41 42
    "+=" (302) 70
    "-=" (303) 71
    "|=" (304) 72
    "^=" (305) 73
    "*=" (306) 74
    "/=" (307) 75
    "%=" (308) 76
    "<<=" (309) 77
    ">>=" (310) 78
    "&=" (311) 79
    "||" (312) 55
    "&&" (313) 56
    "==" (314) 60
    "!=" (315) 61
    ">=" (316) 65
    "<=" (317) 63
    ">>" (318) 84
    "<<" (319) 83
    EXPR (320)
    UNARY (321)
    "=" (322) 49
    "(" (323) 109
    ")" (324) 109
    "++" (325) 165
    "--" (326) 166


Nonterminals, with rules where they appear

    $accept (94)
        on left: 0
    SourceFile (95)
        on left: 1
        on right: 0
    PackageClause (96)
        on left: 2
        on right: 1
    PackageName (97)
        on left: 3
        on right: 2 8 121
    ImportDecl (98)
        on left: 4 5
        on right: 14
    ImportSpec (99)
        on left: 6 7 8
        on right: 4 16
    ImportPath (100)
        on left: 9
        on right: 6 7 8
    TopLevelDecl (101)
        on left: 10 11
        on right: 12
    STAR_TopLevelDecl_SC (102)
        on left: 12 13
        on right: 1 12
    STAR_ImportDecl_SC (103)
        on left: 14 15
        on right: 1 14
    STAR_ImportSpec_SC (104)
        on left: 16 17
        on right: 5 16
    STAR_CM_ID (105)
        on left: 18 19
        on right: 18 40
    STAR_ConstSpec_SC (106)
        on left: 20 21
        on right: 20 38
    STAR_VarSpec_SC (107)
        on left: 22 23
        on right: 22 48
    STAR_CM_EXP (108)
        on left: 24 25
        on right: 24 50
    STAR_TypeSpec_SC (109)
        on left: 26 27
        on right: 26 42
    STAR_Statement_SC (110)
        on left: 28 29
        on right: 28 144
    STAR_CM_ParameterDecl (111)
        on left: 30 31
        on right: 30 223
    STAR_FieldDecl_SC (112)
        on left: 32 33
        on right: 32 208
    Declaration (113)
        on left: 34 35 36
        on right: 10 145
    ConstDecl (114)
        on left: 37 38
        on right: 34
    ConstSpec (115)
        on left: 39
        on right: 20 37
    IdentifierList (116)
        on left: 40
        on right: 39 49 209 210 225 226
    TypeDecl (117)
        on left: 41 42
        on right: 35
    TypeSpec (118)
        on left: 43 44
        on right: 41
    AliasDecl (119)
        on left: 45
        on right: 43
    TypeDef (120)
        on left: 46
        on right: 44
    VarDecl (121)
        on left: 47 48
        on right: 36
    VarSpec (122)
        on left: 49
        on right: 22 47
    ExpressionList (123)
        on left: 50
        on right: 49 102 167 186 188
    Expression (124)
        on left: 51 52
        on right: 24 50 52 97 109 135 137 164 165 166 168 169 170 171 177 185 186 187 206
    UnaryExpr (125)
        on left: 53 54
        on right: 51 54
    binary_op (126)
        on left: 55 56 57 58 59
        on right: 52
    rel_op (127)
        on left: 60 61 62 63 64 65
        on right: 57
    add_op (128)
        on left: 66 67 68 69
        on right: 58
    assign_op (129)
        on left: 70 71 72 73 74 75 76 77 78 79
        on right: 167
    mul_op (130)
        on left: 80 81 82 83 84 85
        on right: 59
    unary_op (131)
        on left: 86 87 88 89 90 91
        on right: 54
    PrimaryExpr (132)
        on left: 92 93 94 95
        on right: 53 93 94 95
    Selector (133)
        on left: 96
        on right: 94
    Index (134)
        on left: 97
        on right: 93
    Arguments (135)
        on left: 98 99
        on right: 95
    ArgumentInBracket (136)
        on left: 100
        on right: 99
    ArgumentInBracketFirst (137)
        on left: 101 102
        on right: 100
    ArgumentInBracketEnd (138)
        on left: 103 104 105 106
        on right: 100
    Operand (139)
        on left: 107 108 109
        on right: 92
    Literal (140)
        on left: 110 111 112
        on right: 107
    INT_LIT (141)
        on left: 113 114 115
        on right: 116
    BasicLit (142)
        on left: 116 117 118
        on right: 110
    OperandName (143)
        on left: 119 120
        on right: 108
    QualifiedIdent (144)
        on left: 121
        on right: 120 200
    CompositeLit (145)
        on left: 122
        on right: 111
    LiteralType (146)
        on left: 123 124 125 126
        on right: 122
    LiteralValue (147)
        on left: 127 128 129
        on right: 122 136 138
    ElementList (148)
        on left: 130
        on right: 128 129
    STAR_CM_KeyedElement (149)
        on left: 131 132
        on right: 130 131
    KeyedElement (150)
        on left: 133 134
        on right: 130 131
    Key (151)
        on left: 135 136
        on right: 133
    Element (152)
        on left: 137 138
        on right: 133 134
    FunctionLit (153)
        on left: 139
        on right: 112
    FunctionDecl (154)
        on left: 140 141
        on right: 11
    FunctionName (155)
        on left: 142
        on right: 140 141
    FunctionBody (156)
        on left: 143
        on right: 139 140
    Block (157)
        on left: 144
        on right: 143 154 168 169 170 171 172 173
    Statement (158)
        on left: 145 146 147 148 149 150 151 152 153 154 155 156
        on right: 28 157
    LabeledStmt (159)
        on left: 157
        on right: 146
    Label (160)
        on left: 158
        on right: 157 190 192 194
    SimpleStmt (161)
        on left: 159 160 161 162
        on right: 147 169 170 171 183 184
    EmptyStmt (162)
        on left: 163
        on right: 159
    ExpressionStmt (163)
        on left: 164
        on right: 160
    IncDecStmt (164)
        on left: 165 166
        on right: 161
    Assignment (165)
        on left: 167
        on right: 162
    IfStmt (166)
        on left: 168 169 170 171
        on right: 155 171
    ForStmt (167)
        on left: 172 173
        on right: 156
    ForStmtAfter (168)
        on left: 174 175 176
        on right: 173
    Condition (169)
        on left: 177
        on right: 174 180
    ForClause (170)
        on left: 178
        on right: 175
    OPT_InitStmt (171)
        on left: 179
        on right: 178
    OPT_Condition (172)
        on left: 180 181
        on right: 178
    OPT_PostStmt (173)
        on left: 182
        on right: 178
    InitStmt (174)
        on left: 183
        on right: 179
    PostStmt (175)
        on left: 184
        on right: 182
    RangeClause (176)
        on left: 185 186
        on right: 176
    GoStmt (177)
        on left: 187
        on right: 148
    ReturnStmt (178)
        on left: 188 189
        on right: 149
    BreakStmt (179)
        on left: 190 191
        on right: 150
    ContinueStmt (180)
        on left: 192 193
        on right: 151
    GotoStmt (181)
        on left: 194
        on right: 152
    FallthroughStmt (182)
        on left: 195
        on right: 153
    Type (183)
        on left: 196 197 198
        on right: 45 46 101 102 198 207 209 210 213 224 225 226 227
    TypeName (184)
        on left: 199 200
        on right: 126 196 218
    TypeLit (185)
        on left: 201 202 203 204
        on right: 197 219
    ArrayType (186)
        on left: 205
        on right: 124 201
    ArrayLength (187)
        on left: 206
        on right: 205
    ElementType (188)
        on left: 207
        on right: 125 205
    StructType (189)
        on left: 208
        on right: 123 202
    FieldDecl (190)
        on left: 209 210
        on right: 32
    Tag (191)
        on left: 211
        on right: 209
    PointerType (192)
        on left: 212
        on right: 203
    BaseType (193)
        on left: 213
        on right: 212
    FunctionType (194)
        on left: 214
        on right: 204
    Signature (195)
        on left: 215 216
        on right: 139 140 141 214
    Result (196)
        on left: 217 218 219
        on right: 216
    Parameters (197)
        on left: 220 221 222
        on right: 215 216 217
    ParameterList (198)
        on left: 223
        on right: 221 222
    ParameterDecl (199)
        on left: 224 225 226 227
        on right: 30 223


State 0

    0 $accept: • SourceFile $end

    PACKAGE  shift, and go to state 1

    SourceFile     go to state 2
    PackageClause  go to state 3


State 1

    2 PackageClause: PACKAGE • PackageName

    ID  shift, and go to state 4

    PackageName  go to state 5


State 2

    0 $accept: SourceFile • $end

    $end  shift, and go to state 6


State 3

    1 SourceFile: PackageClause • ';' STAR_ImportDecl_SC STAR_TopLevelDecl_SC

    ';'  shift, and go to state 7


State 4

    3 PackageName: ID •

    $default  reduce using rule 3 (PackageName)


State 5

    2 PackageClause: PACKAGE PackageName •

    $default  reduce using rule 2 (PackageClause)


State 6

    0 $accept: SourceFile $end •

    $default  accept


State 7

    1 SourceFile: PackageClause ';' • STAR_ImportDecl_SC STAR_TopLevelDecl_SC

    $default  reduce using rule 15 (STAR_ImportDecl_SC)

    STAR_ImportDecl_SC  go to state 8


State 8

    1 SourceFile: PackageClause ';' STAR_ImportDecl_SC • STAR_TopLevelDecl_SC
   14 STAR_ImportDecl_SC: STAR_ImportDecl_SC • ImportDecl ';'

    IMPORT  shift, and go to state 9

    $default  reduce using rule 13 (STAR_TopLevelDecl_SC)

    ImportDecl            go to state 10
    STAR_TopLevelDecl_SC  go to state 11


State 9

    4 ImportDecl: IMPORT • ImportSpec
    5           | IMPORT • '(' STAR_ImportSpec_SC ')'
